Add new Japanese vocabulary entries to katakerja.html

--- a/katakerja.html
+++ b/katakerja.html
@@ -320,18 +320,362 @@
 
   <script>
     const data = [
-      ["watashi wa andri desu", "saya andri"],
-      ["watasi wa gakusei dewa arimasen", "saya bukan mahasiswa"],
-      ["rudi-san wa kaishain desuka", "rudi pegawai perusahaan?"],
-      ["daniel-san mo kaishain desu", "daniel juga pegawai perusahaan"],
-      ["mikel-san wa sakura daigaku no sensei desu", "mikel guru universitas sakura"],
-      ["kore wa kasa desu", "ini payung"],
-      ["sore wa watashi no jisho desu", "itu kamus saya"],
-      ["kono hon wa watashi no desu", "ini buku saya"],
-      ["あける", "membuka"],
-      ["あげる", "mengangkat"],
-      ["あさ", "pagi"],
-      ["おべんとう", "kotak makan siang"]
+        ["aru", "ada"],
+  ["oru/iru", "ada"],
+  ["sagyou suru", "bekerja"],
+  ["kyouryoku suru", "bekerja sama"],
+  ["benkyou suru", "belajar"],
+  ["manabu", "belajar"],
+  ["shuppatsu suru", "berangkat"],
+  ["hanashiau", "berbincang-bincang"],
+  ["kokyuu suru", "bernafas"],
+  ["undou suru", "berolahraga"],
+  ["kumu", "berpasangan"],
+  ["keiken suru", "berpengalaman"],
+  ["omou", "berpikir"],
+  ["hanareru", "berpisah"],
+  ["kanashimu", "bersedih"],
+  ["kakureru", "bersembunyi"],
+  ["souji suru", "bersih-bersih"],
+  ["kagayaku", "bersinar"],
+  ["nayamu", "bersusah hati"],
+  ["ukagau", "bertanya"],
+  ["tatakau", "bertarung"],
+  ["deau", "bertemu"],
+  ["kenka suru", "bertengkar"],
+  ["sakebu", "berteriak"],
+  ["kansha suru", "berterima kasih"],
+  ["konyaku suru", "bertunangan"],
+  ["doryoku suru", "berusaha keras"],
+  ["kankou suru", "berwisata"],
+  ["dekiru", "bisa"],
+  ["jisatsu suru", "bunuh diri"],
+  ["tekisuru", "cocok"],
+  ["niau", "cocok, sesuai"],
+  ["kiku", "efektif"],
+  ["konomu", "gemar, menyukai"],
+  ["sawagu", "gempar"],
+  ["kinchou suru", "gugup"],
+  ["kibou suru", "hendak"],
+  ["kurasu", "hidup"],
+  ["ki ni iru", "jadi penasaran, jadi pikiran"],
+  ["sanpo suru", "jalan-jalan"],
+  ["akiru", "jenuh"],
+  ["otoru", "kalah"],
+  ["konran suru", "kalut, melakukan kekacauan"],
+  ["gakkari suru", "kecewa"],
+  ["shitsubou suru", "kecewa"],
+  ["ushinau", "kehilangan"],
+  ["kakeru", "kekurangan"],
+  ["gaishutsu suru", "keluar"],
+  ["ataru", "kena"],
+  ["soudan suru", "konsultasi"],
+  ["goukyaku suru", "lulus"],
+  ["massugu", "lurus"],
+  ["kuu", "makan"],
+  ["namakeru", "malas"],
+  ["abiru", "mandi"],
+  ["nyuuin suru", "masuk rumah sakit"],
+  ["nyuugaku suru", "masuk sekolah"],
+  ["kaishaku suru", "menjelaskan, menginterpretasikan"],
+  ["koeru", "melampaui"],
+  ["sugureru", "melampaui"],
+  ["shingaku suru", "melanjutkan sekolah"],
+  ["houkoku suru", "melaporkan"],
+  ["kinshi suru", "melarang"],
+  ["bakuhatsu suru", "meledakkan"],
+  ["nuku", "melepas"],
+  ["hanasu", "melepas"],
+  ["hazusu", "melepaskan, menghilangkan"],
+  ["miru", "melihat"],
+  ["mamoru", "melindungi"],
+  ["oudan suru", "melintasi"],
+  ["yokogiru", "melintasi"],
+  ["fukumu", "meliputi, mengandung"],
+  ["tobidasu", "melompat"],
+  ["hirogaru", "meluas, melebar, menjalar"],
+  ["kaku", "melukis, menggambar"],
+  ["hassha suru", "meluncur"],
+  ["yurusu", "memaafkan"],
+  ["rikai suru", "memahami"],
+  ["kanaderu", "memainkan (musik)"],
+  ["susumeru", "memajukan"],
+  ["kaburu", "memakai (untuk di kepala)"],
+  ["mochiiru", "memakai, mempergunakan"],
+  ["muri suru", "memaksakan diri"],
+  ["nagameru", "memandang"],
+  ["shuukaku suru", "memanen"],
+  ["karu", "memangkas"],
+  ["tsukeru", "memasang, menempelkan"],
+  ["tashikameru", "memastikan"],
+  ["waru", "membagi"],
+  ["oujiru", "membalas, memenuhi"],
+  ["hikaku suru", "membandingkan"],
+  ["enjo suru", "membantu, mendukung"],
+  ["kagiru", "membatasi"],
+  ["seigen suru", "membatasi"],
+  ["shiharau", "membayar"],
+  ["kogoeru", "membeku"],
+  ["wakeru", "membelah"],
+  ["kirau", "membenci"],
+  ["nobasu", "membentangkan"],
+  ["kau", "memberi makan"],
+  ["ataeru", "memberikan, mempersembahkan"],
+  ["kensetsu suru", "membina"],
+  ["nobiru", "membujur, memanjang"],
+  ["shoumei suru", "membuktikan"],
+  ["korosu", "membunuh"],
+  ["kusaru", "membusuk"],
+  ["toku", "memecahkan"],
+  ["tsukamu", "memegang"],
+  ["idaku", "memeluk"],
+  ["kensa suru", "memeriksa"],
+  ["meijiru", "memerintah"],
+  ["chuumon suru", "memesan"],
+  ["sentaku suru", "memilih"],
+  ["utsusu", "memindah"],
+  ["motomeru", "meminta"],
+  ["habuku", "memotong, mengesampingkan"],
+  ["kamau", "mempedulikan, menghiraukan"],
+  ["shuuri suru", "memperbaiki"],
+  ["giron suru", "membincangkan"],
+  ["ronjiru", "memperbincangkan, membahas"],
+  ["keikoku suru", "memperingati"],
+  ["fusegu", "menangkal"],
+  ["taiho suru", "menangkap"],
+  ["tsukamaru", "menangkap"],
+  ["kyoukyuu suru", "menawarkan, memberikan"],
+  ["tassuru", "mencapai"],
+  ["todoku", "mencapai, sampai"],
+  ["shuushoku suru", "mencari pekerjaan"],
+  ["yobou suru", "mencegah"],
+  ["eigyou suru", "berbisnis"],
+  ["kataru", "bercerita"],
+  ["shoubai suru", "berdagang"],
+  ["motodzuku", "berdasarkan"],
+  ["damaru", "berdiam"],
+  ["tachiageru", "berdiri"],
+  ["oyogu", "berenang"],
+  ["sanka suru", "bergabung"],
+  ["kitai suru", "berharap"],
+  ["negau", "berharap"],
+  ["yameru", "berhenti"],
+  ["tomeru", "berhenti, bermalam"],
+  ["yakusoku suru", "berjanji, membuat janji"],
+  ["kanren suru", "berkaitan"],
+  ["iu", "berkata"],
+  ["uragiru", "berkhianat"],
+  ["shuuchuu suru", "berkonsentrasi"],
+  ["kouken suru", "berkontribusi"],
+  ["kaigou suru", "berkumpul"],
+  ["heru", "berkurang"],
+  ["kotonaru", "berlainan"],
+  ["kunren suru", "berlatih"],
+  ["renshuu suru", "berlatih"],
+  ["aisuru", "mencintai"],
+  ["tamesu", "mencoba"],
+  ["tsugu", "mencurahi"],
+  ["kurushimu", "menderita"],
+  ["hakken suru", "mendeteksi, mendapati"],
+  ["kenchiku suru", "mendirikan"],
+  ["kyouchou suru", "menekankan, menonjolkan"],
+  ["kentou suru", "meneliti"],
+  ["toosu", "menembus"],
+  ["shimeru", "menempel"],
+  ["haru", "menepuk"],
+  ["tobasu", "menerbangkan"],
+  ["shuppan suru", "menerbitkan"],
+  ["itadaku", "menerima"],
+  ["uketoru", "menerima"],
+  ["morau", "menerima"],
+  ["kettei suru", "menetapkan"],
+  ["kiroku suru", "mengabadikan, mencatat"],
+  ["tekiyou suru", "mengadopsi, menggunakan (mesin)"],
+  ["sasou", "mengajak, mengundang"],
+  ["susumeru", "mengajukan"],
+  ["oeru", "mengakhiri"],
+  ["tsuujiru", "mengalirkan"],
+  ["nagasu", "mengalirkan"],
+  ["kansatsu suru", "mengamati"],
+  ["toriageru", "mengambil"],
+  ["bunseki suru", "menganalisa"],
+  ["tayoru", "mengandalkan"],
+  ["shitsugyou suru", "menganggur"],
+  ["mochiageru", "mengangkat"],
+  ["haitatsu suru", "mengantarkan"],
+  ["furu", "mengayunkan"],
+  ["hihyou suru", "mengecam, mengkritik"],
+  ["henkou suru", "mengedit"],
+  ["ou", "mengejar"],
+  ["yushutsu suru", "menekspor"],
+  ["arawasu", "mengekspresikan"],
+  ["mawasu", "mengelilingi"],
+  ["keiei suru", "mengelola"],
+  ["modosu", "mengembalikan"],
+  ["hatten suru", "mengembangkan"],
+  ["noberu", "mengemukakan, menceritakan"],
+  ["haku", "mengenakan, memakai (untuk kaki)"],
+  ["nigiru", "mengepal"],
+  ["kakomu", "mengepung"],
+  ["unaru", "mengerang, merintih"],
+  ["nozoku", "mengesampingkan"],
+  ["yatou", "menggaji, mempekerjakan"],
+  ["egaku", "menggambar"],
+  ["jama suru", "mengganggu"],
+  ["meiwaku suru", "mengganggu"],
+  ["kaeru", "mengganti"],
+  ["koukan suru", "mengganti, menukar"],
+  ["kakeru", "menggantung"],
+  ["ugokasu", "menggerakkan"],
+  ["furueru", "menggigil, gemetaran"],
+  ["kuruu", "menggila"],
+  ["korobu", "mengguling, berguling"],
+  ["oyobosu", "menggunakan"],
+  ["shiyou suru", "menggunakan"],
+  ["sugosu", "menghabiskan"],
+  ["mukeru", "menghadapkan, mengarahkan"],
+  ["shusseki suru", "menghadiri"],
+  ["nozomu", "mengharapkan, berkeinginan"],
+  ["sakeru", "menghindar"],
+  ["kazoeru", "menghitung"],
+  ["keisan suru", "menghitung, menjabarkan"],
+  ["sonkei suru", "menghormati"],
+  ["bassuru", "menghukum"],
+  ["musubu", "mengikat"],
+  ["shitagau", "mengikuti"],
+  ["yunyuu suru", "mengimpor"],
+  ["arawasu", "mengindikasikan"],
+  ["omoidasu", "mengingat"],
+  ["okuru", "mengirim hadiah"],
+  ["kinyuu suru", "mengisi, menginput"],
+  ["kyoka suru", "mengizinkan"],
+  ["shinpai suru", "mengkhawatirkan"],
+  ["kakunin suru", "mengkonfirmasi"],
+  ["shounin suru", "mengkonfirmasi"],
+  ["shouhi suru", "mengkonsumsi"],
+  ["oshaberu", "mengobrol"],
+  ["shikaru", "mengomeli, memarahi"],
+  ["keiyaku suru", "mengontrak"],
+  ["sayuu suru", "menguasai, mengendalikan"],
+  ["henka suru", "mengubah"],
+  ["hakaru", "mengukur"],
+  ["kurikaesu", "mengulang"],
+  ["tsumoru", "mengumpulkan"],
+  ["happyou suru", "mengumumkan"],
+  ["shoutai suru", "mengundang"],
+  ["houmon suru", "mengunjungi"],
+  ["herasu", "mengurangi"],
+  ["kanri suru", "mengurus"],
+  ["shori suru", "mengurus, mengolah"],
+  ["hyouka suru", "menilai"],
+  ["shuusei suru", "meninjau kembali"],
+  ["azukeru", "menitipkan"],
+  ["tsuku", "menjabat"],
+  ["naru", "menjadi"],
+  ["nureru", "menjadi basah"],
+  ["suku", "menjadi kosong"],
+  ["akeru", "menjadi terang"],
+  ["shihai suru", "menjajah"],
+  ["hoshou suru", "menjamin"],
+  ["hanasu", "menjauhkan"],
+  ["konzatsu suru", "menjejal"],
+  ["tsumeru", "menjejal kan"],
+  ["yuushou suru", "menjuarai, memenangi"],
+  ["hihan suru", "mengkritik"],
+  ["kotowaru", "menolak"],
+  ["furimuku", "menoleh"],
+  ["muku", "menoleh, berpaling"],
+  ["tasukeru", "menolong"],
+  ["osameru", "menuai"],
+  ["kaeru", "menukar"],
+  ["sasu", "menunjuk"],
+  ["shimesu", "menunjukan, mengindikasikan"],
+  ["orosu", "menurunkan"],
+  ["sasu", "menusuk, menikam"],
+  ["tojiru", "menutup"],
+  ["oou", "menutupi"],
+  ["kidzuku", "menyadari"],
+  ["semeru", "menyalahkan"],
+  ["hoeru", "menyalak, menggonggong, meraung"],
+  ["kangei suru", "menyambut"],
+  ["awaseru", "menyatukan"],
+  ["sosogu", "menyeduh, melimpahkan, mencurahi"],
+  ["sukuu", "menyelamatkan"],
+  ["chousa suru", "menyelidiki"],
+  ["kakusu", "menyembunyikan"],
+  ["kansei suru", "menyempurnakan, rampung"],
+  ["fureru", "menyentuh"],
+  ["akirameru", "menyerah"],
+  ["makaseru", "menyerahkan"],
+  ["utsu", "menyerang"],
+  ["kougeki suru", "menyerang"],
+  ["unten suru", "menyetir"],
+  ["housou suru", "menyiarkan"],
+  ["ketsuron suru", "menyimpulkan"],
+  ["nokosu", "menyisakan"],
+  ["sasaeru", "menyokong, menopang"],
+  ["shigeki suru", "merangsang"],
+  ["kanjiru", "merasa"],
+  ["iwau", "merayakan"],
+  ["sumaseru", "meredakan"],
+  ["suisen suru", "merekomendasikan"],
+  ["taisuru", "terhadap, menghadapi"],
+  ["kandou suru", "terharu, miris"],
+  ["tsunagu", "terhubung"],
+  ["okoru", "terjadi"],
+  ["sameru", "terjaga, terbangun"],
+  ["ureru", "terjual"],
+  ["bikkuri suru", "terkejut"],
+  ["kanshin suru", "terkesan, mengagumi"],
+  ["eru", "memperoleh"],
+  ["kasegu", "memperoleh pendapatan"],
+  ["sonaeru", "mempersiapkan"],
+  ["seisan suru", "memproduksi"],
+  ["homeru", "memuji"],
+  ["ateru", "memukul"],
+  ["kashi suru", "memulai"],
+  ["kaifuku suru", "memulihkan"],
+  ["kesshin suru", "menambahkan"],
+  ["tataku", "menabuk"],
+  ["chokin suru", "menabung"],
+  ["seikyuu suru", "menagih"],
+  ["gaman suru", "menahan, bersabar"],
+  ["noseru", "menaikkan"],
+  ["masu", "menambah"],
+  ["kuwaeru", "menambah, menambahkan"],
+  ["chikoku suru", "terlambat"],
+  ["nukeru", "terlepas"],
+  ["kireru", "terpotong, cakap, habis"],
+  ["hohoemu", "tersenyum"],
+  ["nokoru", "tertinggal, tersisa"],
+  ["touchaku suru", "tiba"],
+  ["keikaku suru", "merencanakan"],
+  ["ubau", "merenggut"],
+  ["yaburu", "merobek"],
+  ["taosu", "merobohkan, meruntuhkan, mengalahkan"],
+  ["keiji suru", "mewahyukan"],
+  ["yuzuru", "mewariskan, memindahkan"],
+  ["arawareru", "muncul"],
+  ["haku", "muntah"],
+  ["noboru", "naik, terbit"],
+  ["shouchi suru", "paham, mengerti"],
+  ["tokeru", "pecah, terurai"],
+  ["michiru", "penuh"],
+  ["shinjiru", "percaya"],
+  ["iku", "pergi"],
+  ["saru", "pergi, meninggalkan"],
+  ["shucchou suru", "perjalanan bisnis"],
+  ["kitaku suru", "pulang ke rumah"],
+  ["kansuru", "sehubungan dengan, berkenaan dengan"],
+  ["ryuugaku suru", "sekolah di luar negeri"],
+  ["kanryou suru", "selesai, rampung"],
+  ["uttaeru", "sue person, resort"],
+  ["seikou suru", "sukses"],
+  ["osoreru", "takut"],
+  ["oboreru", "tenggelam"],
+  ["shizumu", "tenggelam"],
+  ["moeru", "terbakar"],
+  ["sodatsu", "terdidik, besar"]
     ];
 
     let questions = [], current = 0, score = 0;
