--- a/kosakata.html
+++ b/kosakata.html
@@ -379,27 +379,7 @@
 ["にんにく", "bawang putih"],["さやえんどう", "kacang panjang"],["えんどう まめ / あおまめ", "kacang polong"],
 ["カリフラワー", "kembang kol"],["きゅうり", "mentimun"],["ピーマン", "cabe hijau"],["まめ", "kacang"],
 ["マッシュルーム", "jamur"],["はくさい", "sawi"],["かぼちゃ", "labu"],["ブロッコリー", "brokoli"],["だいず", "kedelai"],
-["いんげん まめ", "kacang merah"],["おおきい", "besar"],["ちいさい", "kecil"],["ながい", "panjang"],["みじかい", "pendek"],
-["おおい", "banyak"],["すくない", "sedikit"],["ふとい", "gemuk,tebal"],["ほそい", "ramping,tipis"],["あつい", "tebal"],
-["うすい", "tipis"],["かたい", "keras"],["やわらかい", "lunak"],["こまかい", "kecil(uang)"],["あらい", "kasar"],
-["あたらしい", "baru"],["ふるい", "lama,tua"],["たかい", "mahal"],["やすい", "murah"],["はやい", "cepat(waktu)"],
-["はやい", "cepat(kelajuan)"],["おそい", "lambat"],["とおい", "jauh"],["ちかい", "dekat"],["つよい", "kuat"],
-["よわい", "lemah"],["たかい", "tinggi,mahal"],["ひくい", "rendah"],["あつい", "panas(mkn,minum dll)"],
-["あたたかい", "hangat(mkn,minum dll)"],["あつい", "panas(suhu)"],["つめたい", "dingin(mkn,minum dll)"],
-["ぬるい", "kurang panas, tdk panas tdk dingin jg"],["まるい", "bundar/bulat"],["あまい", "manis"],["からい", "pedas"],
-["すっぱい", "asam"],["しおからい", "asin"],["にがい", "pahit"],["こい", "pekat"],["うすい", "tipis,encer(rasa)"],
-["おいしい", "enak"],["まずい", "tidak enak"],["さむい", "dingin(suhu)"],["あたたかい", "hangat(suhu)"],
-["すずしい", "sejuk(suhu)"],["むしあつい", "panas gerah"],["あかるい", "terang,riang"],["くらい", "gelap,suram"],
-["きたない", "kotor"],["おもい", "berat"],["かるい", "ringan"],["くわしい", "detail"],["むずかしい", "sulit"],
-["やさしい", "mudah"],["めずらしい", "langka"],["おかしい", "aneh,lucu"],["あぶない", "berbahaya"],["うまい", "enak,pandai"],
-["いい", "bagus"],["わるい", "jelek"],["ひどい", "kejam"],["うるさい", "berisik"],["いそがしい", "sibuk"],["ただしい", "benar"],
-["すごい", "hebat"],["すばらしい", "luar biasa"],["かっこいい", "keren,terlihat bagus"],["えらい", "pintar,hebat,bagus"],
-["したしい", "akrab"],["やさしい", "baik hati,ramah"],["かわいい", "cantik,lucu,imut"],["うつくしい", "indah"],
-["おとなしい", "bersifat lemah lembut dan tidak keras"],["たのしい", "menyenangkan"],["おもしろい", "menarik,lucu"],
-["つまらない", "membosankan,tidak menarik"],["うれしい", "senang,gembira"],["さびしい", "merasa sepi"],
-["こわい", "takut"],["かなしい", "sedih"],["はずかしい", "malu"],["うらやましい", "iri hati"],
-["なつかしい", "terkenang,melepas rindu"],["いたい", "merasa nyeri,sakit"],["ほしい", "ingin mendapatkan"],
-["ない", "tidak ada"],["ざんねん", "menyayangkan"],["しんぱい", "khawatir"],
+["いんげん まめ", "kacang merah"]
     ];
 
     let questions = [], current = 0, score = 0;
