--- a/n5kosakata.html
+++ b/n5kosakata.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kuis Kosakata N5</title>
+  <title>Kuis Kosakata Xpress</title>
   <style>
     * {
       margin: 0;
@@ -287,7 +287,7 @@
     <div class="decoration dec-4">試</div>
     
     <div class="quiz-header">
-      <h2 class="quiz-title">Tebak Arti Kosakata N5</h2>
+      <h2 class="quiz-title">Tebak Arti Kosakata Xpress</h2>
       <p class="quiz-subtitle">Pilih terjemahan Indonesia yang tepat untuk kosakata JLPT N5</p>
     </div>
     
