Update quiz title and subtitle in polakalimat.html

--- a/polakalimat.html
+++ b/polakalimat.html
@@ -287,8 +287,8 @@
     <div class="decoration dec-4">試</div>
     
     <div class="quiz-header">
-      <h2 class="quiz-title">Tebak Arti Kosakata N5</h2>
-      <p class="quiz-subtitle">Pilih terjemahan Indonesia yang tepat untuk kosakata JLPT N5</p>
+      <h2 class="quiz-title">Tebak Arti Pola Kalimat</h2>
+      <p class="quiz-subtitle">Pilih terjemahan Indonesia yang tepat untuk pola kalimat</p>
     </div>
     
     <div class="progress-container">
