--- a/katakerja.html
+++ b/katakerja.html
@@ -287,7 +287,7 @@
     <div class="decoration dec-4">試</div>
     
     <div class="quiz-header">
-      <h2 class="quiz-title">Tebak Arti Kosakata N5</h2>
+      <h2 class="quiz-title">Tebak Arti Kata Kerja</h2>
       <p class="quiz-subtitle">Pilih terjemahan Indonesia yang tepat untuk kosakata JLPT N5</p>
     </div>
     
