Update quiz subtitle for kata kerja section

--- a/katakerja.html
+++ b/katakerja.html
@@ -288,7 +288,7 @@
     
     <div class="quiz-header">
       <h2 class="quiz-title">Tebak Arti Kata Kerja</h2>
-      <p class="quiz-subtitle">Pilih terjemahan Indonesia yang tepat untuk kosakata JLPT N5</p>
+      <p class="quiz-subtitle">Pilih terjemahan Indonesia yang tepat untuk kata kerja</p>
     </div>
     
     <div class="progress-container">
