--- a/artikanji.html
+++ b/artikanji.html
@@ -335,24 +335,24 @@
       ["書きます", "かきます"],
       ["買います", "かいます"],
       ["会います", "あいます"],
-      ["思います", "おもいます"],
-      ["言います", "いいます"],
-      ["立ちます", "たちます"],
-      ["座ります", "すわります"],
-      ["入ります", "はいります"],
-      ["出ます", "でます"],
-      ["開けます", "あけます"],
-      ["閉めます", "しめます"],
-      ["待ちます", "まちます"],
-      ["作ります", "つくります"],
-      ["住みます", "すみます"],
-      ["知ります", "しります"],
-      ["思い出します", "おもいだします"],
-      ["置きます", "おきます"],
-      ["切ります", "きります"],
-      ["送ります", "おくります"],
-      ["借ります", "かります"],
-      ["教えます", "おしえます"],
+      ["私", "わたし"],
+      ["日本", "にほん"],
+      ["本", "ほん"],
+      ["日本人", "にほんじん"],
+      ["人", "じん"],
+      ["行きたい", "いきたい"],
+      ["山田", "やまだ"],
+      ["会社員", "かいしゃいん"],
+      ["病院", "びょういん"],
+      ["家", "いえ"],
+      ["料理", "りょうり"],
+      ["好きな", "すきな"],
+      ["先生", "せんせい"],
+      ["東京", "とうきょう"],
+      ["今", "いま"],
+      ["住んでいます", "すんでいます"],
+      ["大阪", "おおさか"],
+      ["SAMPAI SINI", "SAMPAI SINI"],
       ["習います", "ならいます"],
       ["分かります", "わかります"],
       ["あります", "あります"],
