--- a/xpresstka.html
+++ b/xpresstka.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kuis Partikel Jepang</title>
+  <title>Kuis TKA</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+      font-family: sans-serif;
+      background: #f3f3f8;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -18,98 +18,40 @@
       background: white;
       padding: 2rem;
       border-radius: 15px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
-      width: 420px;
-      max-width: 90vw;
-    }
-    h2 {
-      color: #2c3e50;
-      margin-bottom: 1.5rem;
-      border-bottom: 2px solid #3498db;
-      padding-bottom: 0.5rem;
+      width: 360px;
     }
     #question {
-      font-size: 1.4rem;
+      font-size: 2rem;
       margin-bottom: 1rem;
-      min-height: 60px;
-      color: #34495e;
     }
     #options button {
       display: block;
       width: 100%;
-      margin: 0.5rem 0;
+      margin: 0.4rem 0;
       padding: 0.75rem;
       font-size: 1.1rem;
       cursor: pointer;
-      background-color: #ecf0f1;
-      border: 2px solid #bdc3c7;
-      border-radius: 8px;
-      transition: all 0.3s;
-    }
-    #options button:hover {
-      background-color: #3498db;
-      color: white;
-      border-color: #2980b9;
-      transform: translateY(-2px);
     }
     #result {
       margin-top: 1rem;
       font-weight: bold;
-      min-height: 24px;
-      padding: 0.5rem;
-      border-radius: 5px;
     }
     #score, #finalScore {
       margin-top: 1rem;
       font-size: 1rem;
-      color: #7f8c8d;
     }
     #restartBtn {
       margin-top: 1rem;
-      padding: 0.7rem 1.5rem;
+      padding: 0.5rem 1rem;
       display: none;
-      background-color: #2ecc71;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 1rem;
-      transition: background-color 0.3s;
-    }
-    #restartBtn:hover {
-      background-color: #27ae60;
-    }
-    .example {
-      font-size: 0.9rem;
-      color: #7f8c8d;
-      margin-top: 0.8rem;
-      font-style: italic;
-      background-color: #f8f9fa;
-      padding: 0.5rem;
-      border-radius: 5px;
-    }
-    .progress-bar {
-      height: 6px;
-      background-color: #ecf0f1;
-      border-radius: 3px;
-      margin-bottom: 1rem;
-      overflow: hidden;
-    }
-    .progress {
-      height: 100%;
-      background-color: #3498db;
-      width: 0%;
-      transition: width 0.5s;
     }
   </style>
 </head>
 <body>
   <div class="quiz-container">
-    <h2>Kuis Partikel Jepang</h2>
-    <div class="progress-bar">
-      <div class="progress" id="progress"></div>
-    </div>
+    <h2>Kuis Kun/On Kanji</h2>
     <div id="question">...</div>
     <div id="options"></div>
     <div id="result"></div>
@@ -119,126 +61,149 @@
   </div>
   <script>
     const data = [
-      {
-        question: "watashi (...) gakusei desu.",
-        options: ["は (wa)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "は (wa)",
-        example: "私(...)学生です。 (saya adalah pelajar.)"
-      },
-      {
-        question: "kore (...) hon desu.",
-        options: ["は (wa)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "は (wa)",
-        example: "これ(...)本です。 (ini adalah buku.)"
-      },
-      {
-        question: "dare (...) kimashita ka?",
-        options: ["は (wa)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "が (ga)",
-        example: "誰(...)来ましたか？ (siapa yang datang?)"
-      },
-      {
-        question: "nani (...) tabemasu ka?",
-        options: ["は (wa)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "を (wo)",
-        example: "何(...)食べますか？ (apa yang akan kamu makan?)"
-      },
-      {
-        question: "gakkō (...) ikimasu.",
-        options: ["は (wa)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "に (ni)",
-        example: "学校(...)行きます。 (pergi ke sekolah.)"
-      },
-      {
-        question: "toshokan (...) benkyō shimasu.",
-        options: ["で (de)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "で (de)",
-        example: "図書館(...)勉強します。 (belajar di perpustakaan.)"
-      },
-      {
-        question: "tomodachi (...) eiga o mimashita.",
-        options: ["と (to)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "と (to)",
-        example: "友達(...)映画を見ました。 (menonton film dengan teman.)"
-      },
-      {
-        question: "kono pen (...) kaite kudasai.",
-        options: ["で (de)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "で (de)",
-        example: "このペン(...)書いてください。 (tolong tulis dengan pena ini.)"
-      },
-      {
-        question: "kesa 7-ji (...) okimashita.",
-        options: ["は (wa)", "が (ga)", "に (ni)", "で (de)"],
-        correct: "に (ni)",
-        example: "今朝7時(...)起きました。 (bangun jam 7 pagi ini.)"
-      },
-      {
-        question: "kōen (...) arukimashita.",
-        options: ["を (wo)", "が (ga)", "に (ni)", "で (de)"],
-        correct: "を (wo)",
-        example: "公園(...)歩きました。 (berjalan melalui taman.)"
-      },
-      {
-        question: "kono resutoran (...) sushi ga oishii desu.",
-        options: ["は (wa)", "の (no)", "を (wo)", "に (ni)"],
-        correct: "の (no)",
-        example: "このレストラン(...)寿司が美味しいです。 (sushi di restoran ini enak.)"
-      },
-      {
-        question: "ashita (...) kite kudasai.",
-        options: ["は (wa)", "が (ga)", "を (wo)", "まで (made)"],
-        correct: "まで (made)",
-        example: "明日(...)来てください。 (tolong datang besok.)"
-      },
-      {
-        question: "kono hon (...) yomimashita.",
-        options: ["は (wa)", "が (ga)", "を (wo)", "から (kara)"],
-        correct: "を (wo)",
-        example: "この本(...)読みました。 (saya membaca buku ini.)"
-      },
-      {
-        question: "nihon (...) kimashita.",
-        options: ["は (wa)", "が (ga)", "から (kara)", "に (ni)"],
-        correct: "から (kara)",
-        example: "日本(...)来ました。 (datang dari jepang.)"
-      },
-      {
-        question: "kono michi (...) massugu itte kudasai.",
-        options: ["は (wa)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "を (wo)",
-        example: "この道(...)まっすぐ行ってください。 (silakan lurus di jalan ini.)"
-      },
-      {
-        question: "kono kēki (...) tabetai desu.",
-        options: ["は (wa)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "が (ga)",
-        example: "このケーキ(...)食べたいです。 (saya ingin makan kue ini.)"
-      },
-      {
-        question: "sensei (...) hanashimashita.",
-        options: ["は (wa)", "が (ga)", "と (to)", "に (ni)"],
-        correct: "と (to)",
-        example: "先生(...)話しました。 (berbicara dengan guru.)"
-      },
-      {
-        question: "kono heya (...) kirei desu.",
-        options: ["は (wa)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "は (wa)",
-        example: "この部屋(...)きれいです。 (kamar ini bersih.)"
-      },
-      {
-        question: "watashi (...) sore ga hoshii desu.",
-        options: ["は (wa)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "は (wa)",
-        example: "私(...)それが欲しいです。 (saya menginginkan itu.)"
-      },
-      {
-        question: "kono hon (...) omoshiroi desu.",
-        options: ["は (wa)", "が (ga)", "を (wo)", "に (ni)"],
-        correct: "が (ga)",
-        example: "この本(...)面白いです。 (buku ini menarik.)"
-      }
+      ["あさごはん", "sarapan"],
+["あける", "membuka"],
+["あそぶ", "bermain"],
+["あに", "kakak laki laki"],
+["アニメ", "anime"],
+["あびます", "mandi"],
+["あね", "kakak perempuan"],
+["あらいます", "mencuci(muka/tangan)"],
+["あるく", "berjalan"],
+["いう", "mengatakan"],
+["いきます", "pergi"],
+["いちねんせい", "siswa kelas 1"],
+      ["いしゅうかん", "satu minggu"],
+["いぬ", "anjing"],
+["いもうと", "adik perempuan"],
+["うさぎ", "kelinci"],
+["うたう", "menyanyi"],
+["うみ", "laut"],
+["え", "gambar"],
+["えいがかん", "bioskop"],
+["えいご", "bahasa inggris"],
+["えんぴつ", "pensil"],
+      ["おいのりします", "berdoa"],
+["おきます", "bangun"],
+["おくる", "mengirim"],
+["おかあさん", "ibu"],
+["おしゃべります", "mengobrol"],
+["おしえる", "mengajar/memberi tau"],
+["おちる", "jatuh"],
+["おとうと", "adik laki laki"],
+["おどる", "menari"],
+["おにぎり", "nasi kepal"],
+      ["おもちゃ", "mainan"],
+      ["およぐ", "berenang"],
+      ["おりる", "turun(kendaraan)"],
+      ["かいしゃいん", "karyawan perusahaan"],
+      ["がいこくご", "bahasa asing"],
+      ["かいます", "membeli"],
+      ["かく", "menulis"],
+      ["がっこう", "sekolah"],
+      ["かける", "memakai(kacamata)"],
+      ["かぶる", "memakai(topi)"],
+      ["カップ", "cangkir"],
+      ["カレンダ", "kalender"],
+      ["カんじ", "kanji"],
+      ["ガムラン", "gamelan"],
+      ["き", "pohon"],
+      ["きく", "mendengar"],
+      ["ギター", "gitar"],
+      ["キッチン", "dapur"],
+      ["きる", "memakai(baju)"],
+      ["くがつ", "bulan september"],
+      ["くつ", "sepatu"],
+      ["くるま", "mobil"],
+      ["けいたいでんわ", "telepon genggam"],
+      ["ケーキ", "kue"],
+      ["げいじゅつ", "seni"],
+      ["ゲーム", "game"],
+      ["こころ", "hati"],
+      ["ごがつ", "bulan mei"],
+      ["こうちょうしつ", "ruang kepala sekolah"],
+      ["サッカー", "sepak bola"],
+      ["さら", "piring"],
+      ["さんがい", "lantai 3"],
+      ["さんねんせい", "siswa kelas 3"],
+      ["しごと", "pekerjaan"],
+      ["しちがつ", "bulan juli"],
+      ["しめる", "menutup"],
+      ["シゃツ", "kemeja"],
+      ["しゅみ", "hobi"],
+      ["しょくいんしつ", "ruang guru"],
+      ["しょうがくせい", "siswa SD"],
+      ["しんぶん", "koran"],
+      ["じしょ", "kamus"],
+      ["じどうはんばいき", "mesin penjual otomatis"],
+      ["じむしつ", "kantor"],
+      ["ジャケット", "jaket"],
+      ["ジュース", "jus"],
+      ["すうがく", "matematika"],
+      ["する", "melakukan/memakai(dasi,jam)"],
+      ["すわる", "duduk"],
+      ["スラバヤ", "surabaya"],
+      ["せんせい", "guru"],
+      ["せんぷうき", "kipas angin"],
+      ["そうじします", "membersihkan"],
+      ["そぼ", "nenek"],
+      ["たたく", "memukul(drum)"],
+      ["たつ", "berdiri"],
+      ["たな", "rak"],
+      ["たまご", "telur"],
+      ["たんじょうび", "ulang tahun"],
+      ["たべます", "makan"],
+      ["たべましょう", "ayo makan"],
+      ["たべもの", "makanan"],
+      ["ダンス", "dansa"],
+      ["ちち", "ayah"],
+      ["ちゅうごくご", "bahasa mandarin"],
+      ["つかう", "menggunakan"],
+      ["つく", "tiba"],
+      ["つくる", "membuat"],
+      ["つかれる", "lelah"],
+      ["つり", "memancing"],
+      ["テニス", "tenis"],
+      ["でる", "keluar"],
+      ["でんわばんごう", "nomor telepon"],
+      ["てんいん", "pelayan toko"],
+      ["どいつご", "bahasa jerman"],
+      ["とけい", "jam"],
+      ["とだな", "lemari"],
+      ["とまる", "berhenti"],
+      ["とる", "mengambil"],
+      ["としょしつ", "perpustakaan"],
+      ["ドラマ", "drum"],
+      ["ならう", "belajar(dari guru)"],
+      ["なんかい", "berapa kali"],
+      ["にねんせい", "siswa kelas 2"],
+      ["にほんご", "bahasa jepang"],
+      ["にわ", "taman"],
+      ["にんぎょう", "boneka"],
+      ["ねこ", "kucing"],
+      ["ねます", "tidur"],
+      ["のぼる", "mendaki"],
+      ["のむ", "minum"],
+      ["のる", "naik(kendaraan)"],
+      ["ノート", "buku catatan"],
+      ["はいる", "masuk"],
+      ["はく", "memakai(celana,rok,sepatu)"],
+      ["はしる", "berlari"],
+      ["はちがつ", "agustus"],
+      ["はたらく", "bekerja"],
+      ["はなします", "berbicara"],
+      ["はは", "ibu"],
+      ["バドミントン", "badminton"],
+      ["バスケットボール", "bola basket"],
+      ["ばんごはん", "makan malam"],
+      ["ひく", "memainkan(alat musik petik)"],
+      ["ひこうき", "pesawat terbang"],
+      ["ひらがな", "hiragana"],
+      ["ピアノ", "piano"],
+      ["ふえ", "seruling"],
+      ["べッド", "tempat tidur"],
+      ["ぺッと", "hewan peliharaan"],
+      ["べんきょうします", "belajar"],
     ];
 
     let questions = [];
@@ -252,35 +217,34 @@
       }
     }
 
-    function updateProgress() {
-      const progress = document.getElementById("progress");
-      progress.style.width = `${(current / data.length) * 100}%`;
-    }
-
     function loadQuestion() {
       if (current >= questions.length) {
         showFinalScore();
         return;
       }
 
-      const questionData = questions[current];
-      document.getElementById("question").innerHTML = 
-        `<div>${questionData.question}</div>
-         <div class="example">${questionData.example}</div>`;
+      const [romaji, correct] = questions[current];
+      document.getElementById("question").textContent = romaji;
       document.getElementById("result").textContent = "";
 
+      const options = new Set([correct]);
+      while (options.size < 4) {
+        const rand = data[Math.floor(Math.random() * data.length)][1];
+        options.add(rand);
+      }
+
+      const shuffled = Array.from(options).sort(() => Math.random() - 0.5);
       const optionsDiv = document.getElementById("options");
       optionsDiv.innerHTML = "";
 
-      questionData.options.forEach(opt => {
+      shuffled.forEach(opt => {
         const btn = document.createElement("button");
         btn.textContent = opt;
-        btn.onclick = () => checkAnswer(opt, questionData.correct);
+        btn.onclick = () => checkAnswer(opt, correct);
         optionsDiv.appendChild(btn);
       });
 
       document.getElementById("score").textContent = `Skor: ${score} / ${data.length}`;
-      updateProgress();
     }
 
     function checkAnswer(selected, correct) {
@@ -288,25 +252,22 @@
       if (selected === correct) {
         result.textContent = `✅ Benar!`;
         result.style.color = "green";
-        result.style.backgroundColor = "#d4edda";
         score++;
         current++;
-        setTimeout(loadQuestion, 800);
+        setTimeout(loadQuestion, 600);
       } else {
         result.textContent = `❌ Salah! Jawaban: ${correct}`;
-        result.style.color = "#721c24";
-        result.style.backgroundColor = "#f8d7da";
+        result.style.color = "red";
       }
       document.getElementById("score").textContent = `Skor: ${score} / ${data.length}`;
     }
 
     function showFinalScore() {
-      document.getElementById("question").textContent = "Kuis Selesai!";
+      document.getElementById("question").textContent = "Selesai!";
       document.getElementById("options").innerHTML = "";
       document.getElementById("result").textContent = "";
       document.getElementById("finalScore").textContent = `Skor Akhir: ${score} dari ${data.length}`;
       document.getElementById("restartBtn").style.display = "inline-block";
-      document.getElementById("progress").style.width = "100%";
     }
 
     function startQuiz() {
@@ -315,8 +276,6 @@
       questions = [...data];
       shuffle(questions);
       document.getElementById("restartBtn").style.display = "none";
-      document.getElementById("finalScore").textContent = "";
-      document.getElementById("result").style.backgroundColor = "transparent";
       loadQuestion();
     }
 
