Add Japanese numbers to data array

--- a/artikanji.html
+++ b/artikanji.html
@@ -324,11 +324,16 @@
 
   <script>
     const data = [
-      ["行きます", "いきます"],
-      ["来ます", "きます"],
-      ["帰ります", "かえります"],
-      ["食べます", "たべます"],
-      ["飲みます", "のみます"],
+      ["零", "ぜろ"],
+      ["一", "いち"],
+      ["二", "に"],
+      ["三", "さん"],
+      ["四", "よん/し"],
+      ["五", "ご"],
+      ["六", "ろく"],
+      ["七", "なな/しち"],
+      ["八", "はち"],
+      ["九", "のみます"],
       ["見ます", "みます"],
       ["聞きます", "ききます"],
       ["読みます", "よみます"],
