Update Japanese vocabulary list in artikanji.html
Removed several Japanese words and added numbers from ten to sixteen.

--- a/artikanji.html
+++ b/artikanji.html
@@ -334,13 +334,13 @@
       ["七", "なな/しち"],
       ["八", "はち"],
       ["九", "のみます"],
-      ["見ます", "みます"],
-      ["聞きます", "ききます"],
-      ["読みます", "よみます"],
-      ["書きます", "かきます"],
-      ["買います", "かいます"],
-      ["会います", "あいます"],
-      ["私", "わたし"],
+      ["十", "じゅう"],
+      ["十一", "じゅういち"],
+      ["十二", "じゅうに"],
+      ["十三", "じゅうさん"],
+      ["十四", "じゅうよん"],
+      ["十五", "じゅうご"],
+      ["十六", "じゅうろく"],
       ["日本", "にほん"],
       ["本", "ほん"],
       ["日本人", "にほんじん"],
