--- a/polakalimat.html
+++ b/polakalimat.html
@@ -328,9 +328,9 @@
       ["kore wa kasa desu", "ini payung"],
       ["sore wa watashi no jisho desu", "itu kamus saya"],
       ["kono hon wa watashi no desu", "ini buku saya"],
-      ["あける", "membuka"],
-      ["あげる", "mengangkat"],
-      ["あさ", "pagi"],
+      ["koko wa shokudou desu", "SAMPAI SINI"],
+      ["ereebeta wa asoko desu", "mengangkat"],
+      ["watashi wa gohan o tabemasu", "pagi"],
       ["おべんとう", "kotak makan siang"]
     ];
 
