Update translations from Japanese to English
Replaced Japanese readings with English translations for numbers and some common words.

--- a/artikanji.html
+++ b/artikanji.html
@@ -324,84 +324,40 @@
 
   <script>
     const data = [
-      ["零", "ぜろ"],
-      ["一", "いち"],
-      ["二", "に"],
-      ["三", "さん"],
-      ["四", "よん/し"],
-      ["五", "ご"],
-      ["六", "ろく"],
-      ["七", "なな/しち"],
-      ["八", "はち"],
-      ["九", "のみます"],
-      ["十", "じゅう"],
-      ["十一", "じゅういち"],
-      ["十二", "じゅうに"],
-      ["十三", "じゅうさん"],
-      ["十四", "じゅうよん"],
-      ["十五", "じゅうご"],
-      ["十六", "じゅうろく"],
-      ["日本", "にほん"],
-      ["本", "ほん"],
-      ["日本人", "にほんじん"],
-      ["人", "じん"],
-      ["行きたい", "いきたい"],
-      ["山田", "やまだ"],
-      ["会社員", "かいしゃいん"],
-      ["病院", "びょういん"],
-      ["家", "いえ"],
-      ["料理", "りょうり"],
-      ["好きな", "すきな"],
-      ["先生", "せんせい"],
-      ["東京", "とうきょう"],
-      ["今", "いま"],
-      ["住んでいます", "すんでいます"],
-      ["大阪", "おおさか"],
+      ["零", "zero"],
+      ["一", "ichi"],
+      ["二", "ni"],
+      ["三", "san"],
+      ["四", "yon/shi"],
+      ["五", "go"],
+      ["六", "roku"],
+      ["七", "nana/sichi"],
+      ["八", "hachi"],
+      ["九", "kyuu"],
+      ["十", "juu"],
+      ["十一", "juu ichi"],
+      ["十二", "juu ni"],
+      ["十三", "juu san"],
+      ["十四", "juu yon"],
+      ["十五", "juu go"],
+      ["十六", "juu roku"],
+      ["十七", "juu nana"],
+      ["十八", "juu hachi"],
+      ["十九", "juu kyuu"],
+      ["二十", "ni juu"],
+      ["三十", "san juu"],
+      ["四十", "yon juu"],
+      ["五十", "go juu"],
+      ["六十", "roku juu"],
+      ["七十", "nana juu"],
+      ["八十", "hachi juu"],
+      ["九十", "kyuu juu"],
+      ["百", "hyaku"],
+      ["二百", "ni hyaku"],
+      ["三百", "sambyaku"],
+      ["六百", "roppyaku"],
+      ["八百", "happyaku"],
       ["SAMPAI SINI", "SAMPAI SINI"],
-      ["習います", "ならいます"],
-      ["分かります", "わかります"],
-      ["あります", "あります"],
-      ["います", "います"],
-      ["覚えます", "おぼえます"],
-      ["忘れます", "わすれます"],
-      ["払います", "はらいます"],
-      ["洗います", "あらいます"],
-      ["泳ぎます", "およぎます"],
-      ["遊びます", "あそびます"],
-      ["働きます", "はたらきます"],
-      ["休みます", "やすみます"],
-      ["寝ます", "ねます"],
-      ["起きます", "おきます"],
-      ["広い", "ひろい"],
-      ["狭い", "せまい"],
-      ["明るい", "あかるい"],
-      ["暗い", "くらい"],
-      ["新しい", "あたらしい"],
-      ["古い", "ふるい"],
-      ["大きい", "おおきい"],
-      ["小さい", "ちいさい"],
-      ["高い", "たかい"],
-      ["安い", "やすい"],
-      ["白い", "しろい"],
-      ["黒い", "くろい"],
-      ["赤い", "あかい"],
-      ["青い", "あおい"],
-      ["暑い", "あつい"],
-      ["寒い", "さむい"],
-      ["冷たい", "つめたい"],
-      ["難しい", "むずかしい"],
-      ["易しい", "やさしい"],
-      ["忙しい", "いそがしい"],
-      ["楽しい", "たのしい"],
-      ["強い", "つよい"],
-      ["弱い", "よわい"],
-      ["欲しい", "ほしい"],
-      ["痛い", "いたい"],
-      ["長い", "ながい"],
-      ["短い", "みじかい"],
-      ["若い", "わかい"],
-      ["行う", "おこなう"],
-      ["思う", "おもう"],
       ["話す", "はなす"]
     ];
 
