--- a/menuhuruf.html
+++ b/menuhuruf.html
@@ -235,11 +235,11 @@
         <a href="artikanji.html" class="btn">Mulai Kuis</a>
       </div>
 
-      <div class="menu-item" onclick="location.href='artikanji.html'">
+      <div class="menu-item" onclick="location.href='kanji.html'">
         <div class="menu-icon">📔</div>
         <div class="menu-title">Kuis Kanji 2</div>
         <div class="menu-description">Pelajari dan uji pemahaman tentang variasi Kanji dasar</div>
-        <a href="artikanji.html" class="btn">Mulai Kuis</a>
+        <a href="kanji.html" class="btn">Mulai Kuis</a>
       </div>
     </div>
 
