Update Kanji quiz links in menuhuruf.html

--- a/menuhuruf.html
+++ b/menuhuruf.html
@@ -228,18 +228,18 @@
         <a href="kuizz.html" class="btn">Mulai Kuis</a>
       </div>
       
-      <div class="menu-item" onclick="location.href='artikanji.html'">
+      <div class="menu-item" onclick="location.href='kanji1.html'">
         <div class="menu-icon">📒</div>
         <div class="menu-title">Kuis Kanji 1</div>
         <div class="menu-description">Pelajari dan uji pemahaman tentang karakter Kanji dasar</div>
-        <a href="artikanji.html" class="btn">Mulai Kuis</a>
+        <a href="kanji1.html" class="btn">Mulai Kuis</a>
       </div>
 
-      <div class="menu-item" onclick="location.href='kanji.html'">
+      <div class="menu-item" onclick="location.href='kanji2.html'">
         <div class="menu-icon">📔</div>
         <div class="menu-title">Kuis Kanji 2</div>
         <div class="menu-description">Pelajari dan uji pemahaman tentang variasi Kanji dasar</div>
-        <a href="kanji.html" class="btn">Mulai Kuis</a>
+        <a href="kanji2.html" class="btn">Mulai Kuis</a>
       </div>
     </div>
 
