Add more vocabulary translations to xpresstka.html
Added additional vocabulary entries for translation.

--- a/xpresstka.html
+++ b/xpresstka.html
@@ -464,7 +464,28 @@
       ["ふえ", "seruling"],
       ["べッド", "tempat tidur"],
       ["ぺっと", "hewan peliharaan"],
-      ["べんきょうします", "belajar"]
+      ["べんきょうします", "belajar"],
+      ["ほけんしつ", "ruang kesehatan(uks)"],
+      ["ぼうし", "topi"],
+      ["ほん", "buku"],
+      ["まいにち", "setiap hari"],
+      ["まく", "memakai(syal)"],
+      ["まつ", "menunggu"],
+      ["まんが", "komik"],
+      ["みがきます", "menggosok(gigi)"],
+      ["みる", "melihat"],
+      ["ものさし", "penggaris"],
+      ["もつ", "membawa"],
+      ["やま", "gunung"],
+      ["やすみ", "liburan/istirahat"],
+      ["やすむ", "istirahat"],
+      ["ゆめ", "mimpi"],
+      ["ラメーン", "ramen"],
+      ["りょうりします", "memasak"],
+      ["りょこう", "perjalanan/wisata"],
+      ["れいぞうこ", "kulkas"],
+      ["ろくがつ", "juni"],
+      ["わかります", "mengerti"],
     ];
 
     let questions = [];
