Remove duplicate entries from kosakata.html

--- a/kosakata.html
+++ b/kosakata.html
@@ -241,16 +241,7 @@ const data = [
 ["にんにく", "bawang putih"],["さやえんどう", "kacang panjang"],["えんどう まめ / あおまめ", "kacang polong"],
 ["カリフラワー", "kembang kol"],["きゅうり", "mentimun"],["ピーマン", "cabe hijau"],["まめ", "kacang"],
 ["マッシュルーム", "jamur"],["はくさい", "sawi"],["かぼちゃ", "labu"],["ブロッコリー", "brokoli"],["だいず", "kedelai"],
-["いんげん まめ", "kacang merah"]
-    ];
-["ねこ","kucing"],["いぬ","anjing"],["ほん","buku"],["くるま","mobil"],
-["みず","air"],["そら","langit"],["やま","gunung"],["かわ","sungai"],
-["き","pohon"],["はな","bunga"],["ありがとう ございます","terimakasih"],
-["こんにちは","halo"],["おはよう ございます","selamat pagi"],["こんばんは","selamat malam"],
-["おやすみなさい","selamat istirahat"],["さようなら","sampai jumpa"],
-["げつようび","senin"],["かようび","selasa"],["すいようび","rabu"],
-["もくようび","kamis"],["きんようび","jumat"],["どようび","sabtu"],["にちようび","minggu"],
-
+["いんげん まめ", "kacang merah"],
 /* POTONG AGAR JAWABAN TIDAK TERLALU PANJANG */
 ];
 
