Refactor data structure in kotoba.html

--- a/kotoba.html
+++ b/kotoba.html
@@ -152,275 +152,15 @@ body{
 
 <script>
 const data = [
-  ["わたし", "saya"],
-      ["わたしたち", "kami"],
-      ["あなた", "kamu"],
-      ["あのひと", "orang itu"],
-      ["あのかた", "orang itu"],
-      ["みなさん", "anda sekalian"],
-      ["~さん", "sdr,tuan,nyonya"],
-      ["~ちゃん", "akhiran anak"],
-      ["~くん", "akhiran anak laki"],
-      ["~じん", "warga negara"],
-      ["せんせい", "guru"],
-      ["きょうし", "guru"],
-      ["がくせい", "mahasiswa"],
-      ["かいしゃいん", "pegawai perusahaan"],
-      ["しゃいん", "pegawai perusahaan"],
-      ["ぎんこういん", "pegawai bank"],
-      ["いしゃ", "dokter"],
-      ["けんきゅしゃ", "peneliti"],
-      ["エンジ二ア", "engineer"],
-      ["だいがく", "universitas"],
-      ["びょういん", "rumah sakit"],
-      ["でんき", "listrik"],
-      ["だれ", "siapa"],
-      ["どなた", "siapa"],
-      ["~さい", "umur"],
-      ["なんさい", "berapa umur"],
-      ["おいくつ", "berapa umur"],
-      ["はい", "iya"],
-      ["いいえ", "tidak"],
-      ["しつれいですが", "permisi"],
-      ["おなまえは?", "nama anda siapa"],
-      ["はじめまして", "salam kenal"],
-      ["どうぞよろしく", "senang bertemu anda"],
-      ["こちらは~さんてす", "ini adalah"],
-      ["~からきました", "datang dari"],
-      ["アメリカ", "amerika"],
-      ["イギリス", "inggris"],
-      ["インド", "india"],
-      ["インドネシア", "indonesia"],
-      ["かんこく", "korea"],
-      ["タイ", "thailand"],
-      ["ちゅうごく", "china"],
-      ["ドイツ", "jerman"],
-      ["にほん", "jepang"],
-      ["フランス", "prancis"],
-      ["ブラジル", "brazil"],
-      ["これ", "ini"],
-      ["それ", "itu"],
-      ["あれ", "itu"],
-      ["この～ ", "ini"],
-      ["その～ ", "itu"],
-      ["あの～ ", "itu"],
-      ["ほん", "buku"],
-      ["じしょ", "kamus"],
-      ["ざっし", "majalah"],
-      ["しんぶん", "koran"],
-      ["ノート", "notes"],
-      ["てちょう", "buku catatan"],
-      ["めいし", "kartu nama"],
-      ["カード", "kartu"],
-      ["テレホンカード", "kartu telepon"],
-      ["えんぴつ", "pensil"],
-      ["ボールペン", "ball point"],
-      ["シャープペンシル", "pensil mekanik"],
-      ["かぎ", "kunci"],
-      ["とけい", "jam"],
-      ["かさ", "payung"],
-      ["かばん", "tas"],
-      ["テープレコーダー", "tape recorder"],
-      ["テレビ", "televisi"],
-      ["ラジオ", "radio"],
-      ["カメラ", "kamera"],
-      ["コンピューター", "komputer"],
-      ["じどうしゃ", "mobil"],
-      ["つくえ", "meja tulis"],
-      ["いつ", "kapan"],
-      ["コーヒー", "kopi"],
-      ["えいご", "bahasa inggris"],
-      ["にほんご", "bahasa jepang"],
-      ["~ご", "bahasa"],
-      ["なん", "apa"],
-      ["そう", "begitu"],
-      ["ちがいます", "salah"],
-      ["そうですか", "begitukah"],
-      ["あのう", "emmm"],
-      ["どうぞ", "silahkan"],
-      ["どうも", "terimakasih"],
-      ["ありがとう", "terimakasih"],
-      ["こちらこそよろしく", "sama-sama"],
-      ["ここ", "di sini"],
-      ["そこ", "di situ"],
-      ["あそこ", "di sana"],
-      ["どこ", "dimana"],
-      ["こちら", "sini"],
-      ["そちら", "situ"],
-      ["あちら", "sana"],
-      ["どちら", "mana"],
-      ["きょうしつ", "ruang kelas"],
-      ["しょくどう", "ruang makan"],
-      ["じむしょ", "kantor"],
-      ["かいぎしつ", "ruang rapat"],
-      ["うけつけ", "penerima tamu"],
-      ["ロビー", "ruang tunggu"],
-      ["へや", "kamar"],
-      ["トイレ", "toilet"],
-      ["かいだん", "tangga"],
-      ["エレベーター", "lift"],
-      ["エスカレーター", "eskalator"],
-      ["おくに", "negri"],
-      ["かいしゃ", "perusahaan"],
-      ["うち", "rumah"],
-      ["でんわ", "telepon"],
-      ["くつ", "sepatu"],
-      ["ネクタイ", "dasi"],
-      ["ワイン", "wine"],
-      ["たばこ", "rokok"],
-      ["うりば", "toko"],
-      ["ちか", "bawah tanah"],
-      ["ーかい", "lantai"],
-      ["なんがい", "lantai berapa"],
-      ["ーえん", "yen"],
-      ["いくら", "berapa harga"],
-      ["ひゃく", "seratus"],
-      ["せん", "seribu"],
-      ["まん", "sepuluh ribu"],
-      ["すみません", "maaf"],
-      ["みせてください", "tolong perlihatkan"],
-      ["じゃ", "baiklah"],
-      ["ください", "tolong berikan"],
-      ["イタリア", "italia"],
-      ["スイス", "swiss"],
-      ["おきます", "bangun"],
-      ["ねます", "tidur"],
-      ["はたらきます", "bekerja"],
-      ["やすみます", "beristirahat"],
-      ["べんきょうします", "belajar"],
-      ["おわります", "selesai"],
-      ["デパート", "toko serba ada"],
-      ["ぎんこう", "bank"],
-      ["ゆうびんきょく", "kantor pos"],
-      ["としょかん", "perpustakaan"],
-      ["びじゅつかん", "gedung kesenian"],
-      ["いま", "sekarang"],
-      ["ーじ", "pukul"],
-      ["ーふん", "menit"],
-      ["はん", "setengah jam"],
-      ["なんじ", "jam berapa"],
-      ["なんぷん", "berapa menit"],
-      ["ごぜん", "pm(sore,malam)"],
-      ["ごご", "am(pagi)"],
-      ["あさ", "pagi"],
-      ["ひる", "siang"],
-      ["ばん", "malam"],
-      ["おととい", "kemarin dulu"],
-      ["きのう", "kemarin"],
-      ["きょう", "hari ini"],
-      ["あした", "besok"],
-      ["あさって", "lusa"],
-      ["けさ", "tadi pagi"],
-      ["こんばん", "malam ini"],
-      ["やすみ", "istirahat"],
-      ["ひるやすみ", "istirahat siang"],
-      ["まいあさ", "setiap pagi"],
-      ["まいばん", "setiap malam"],
-      ["まいにち", "setiap hari"],
-      ["げつようび", "senin"],
-      ["かようび", "selasa"],
-      ["すいようび", "rabu"],
-      ["もくようび", "kamis"],
-      ["きんようび", "jumat"],
-      ["どようび", "sabtu"],
-      ["にちようび", "minggu"],
-      ["なにようび", "hari apa"],
-      ["ばんごう", "nomor"],
-      ["なんばん", "nomor berapa"],
-      ["~から", "dari"],
-      ["まで", "sampai"],
-      ["~と~", "dan"],
-      ["たいへんですね", "sangat menyusahkan ya"],
-      ["えーと", "aa"],
-      ["おねがいします", "minta tolong"],
-      ["かしこまりました", "mengerti"],
-      ["おといあわせのばんごう", "nomor yang ditanyakan"],
-      ["ありがとうございました", "terimakasih banyak"],
-      ["ニューヨーク", "new york"],
-      ["ペキン", "beijing"],
-      ["ロンドン", "london"],
-      ["バンコク", "bangkok"],
-      ["ロサンゼルス", "los angels"],
-      ["いきます", "pergi"],
-      ["きます", "datang"],
-      ["かえります", "pulang"],
-      ["がっこう", "sekolah"],
-      ["スーパー", "pasar swalayan"],
-      ["えき", "stasiun"],
-      ["ひこうき", "pesawat"],
-      ["ふね", "kapal"],
-      ["でんしゃ", "kereta"],
-      ["ちかてつ", "kereta bawah tanah"],
-      ["しんかんせん", "kereta super"],
-      ["バス", "bus"],
-      ["タクシー", "taksi"],
-      ["じてんしゃ", "sepeda"],
-      ["あるいて", "jalan kaki"],
-      ["ひと", "orang"],
-      ["ともだち", "teman"],
-      ["かれ", "dia laki-laki"],
-      ["かのじょ", "dia perempuan"],
-      ["かぞく", "keluarga"],
-      ["ひとりで", "sendiri"],
-      ["せんしゅう", "minggu lalu"],
-      ["らいしゅう", "minggu depan"],
-      ["せんげつ", "bulan lalu"],
-      ["こんげつ", "bulan ini"],
-      ["らいげつ", "bulan depan"],
-      ["きょねん", "tahun lalu"],
-      ["ことし", "tahun ini"],
-      ["らいねん", "tahun depan"],
-      ["ーがつ", "bulan"],
-      ["なんがつ", "bulan berapa"],
-      ["ついたち", "tanggal 1"],
-      ["ふつか", "tanggal 2"],
-      ["みっか", "tanggal 3"],
-      ["よっか", "tanggal 4"],
-      ["いつか", "tanggal 5"],
-      ["むいか", "tanggal 6"],
-      ["なのか", "tanggal 7"],
-      ["ようか", "tanggal 8"],
-      ["ここのか", "tanggal 9"],
-      ["とおか", "tanggal 10"],
-      ["じゅうよっか", "tanggal 14"],
-      ["はつか", "tanggal 20"],
-      ["にじゅよっか", "tanggal 24"],
-      ["ーにち", "tanggal-"],
-      ["なんにち", "tanggal berapa"],
-      ["いつ", "kapan"],
-      ["たんじょうび", "hari ulang tahun"],
-      ["ふつう", "kereta api biasa"],
-      ["きゅうこう", "kereta api lebih cepat"],
-      ["とっきゅう", "kereta api expres"],
-      ["つぎの", "berikutnya"],
-      ["どういたしまして", "sama sama"],
-      ["ーばんせん", "jalur nomor-"],
-      ["はかた", "nama kota di kyushu"],
-      ["ふしみ", "nama kota di kyoto"],
-      ["こうしえん", "nama kota dekat osaka"],
-      ["おおさかじょう", "benteng osaka"],
-      ["たべます", "makan"],
-      ["のみます", "minum"],
-      ["すいます", "merokok"],
-      ["みます", "melihat"],
-      ["ききます", "mendengar"],
-      ["よみます", "membaca"],
-      ["かきます", "menulis/gambar/lukis"],
-      ["かいます", "membeli"],
-      ["とります", "mengambil(foto)"],
-      ["します", "mengerjakan"],
-      ["あいます", "bertemu"],
-      ["ごはん", "nasi/makan"],
-      ["あさごはん", "sarapan"],
-      ["ひるごはん", "makan siang"],
-      ["ばんごはん", "makan malam"],
-      ["パン", "roti"],
-      ["たまご", "telur"],
-      ["にく", "daging"],
-      ["さかな", "ikan"],
-      ["やさい", "sayuran"],
-      ["くだもの", "buah-buahan"],
-    ];
+["わたし","saya"],["わたしたち","kami"],["あなた","kamu"],["みなさん","anda sekalian"],
+["せんせい","guru"],["がくせい","mahasiswa"],["いしゃ","dokter"],["だいがく","universitas"],
+["ほん","buku"],["じしょ","kamus"],["えんぴつ","pensil"],["かばん","tas"],["とけい","jam"],
+["ここ","di sini"],["そこ","di situ"],["あそこ","di sana"],["どこ","di mana"],
+["きょう","hari ini"],["あした","besok"],["きのう","kemarin"],["あさ","pagi"],
+["ひる","siang"],["ばん","malam"],["たべます","makan"],["のみます","minum"],
+["みます","melihat"],["ききます","mendengar"],["よみます","membaca"],["かきます","menulis"],
+["かいます","membeli"],["いきます","pergi"],["きます","datang"],["かえります","pulang"]
+];
 
 let current = 0;
 
