--- a/kotoba.html
+++ b/kotoba.html
@@ -2,156 +2,173 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-<title>Kotoba Map Quiz</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Japanese Vocab Game ULTRA</title>
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-body{
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-  background: linear-gradient(180deg,#58cc02,#1cb0f6);
-  min-height:100vh;
-  overflow-x:hidden;
+
+html,body{
+  height:100%;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Inter,sans-serif;
+  background:#e6f9e6;
 }
 
-.map{
-  padding:30px 0 120px;
+body{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.app{
+  width:100%;
+  max-width:420px;
+  height:100%;
+  background:#ffffff;
   display:flex;
   flex-direction:column;
+  padding:14px;
+}
+
+/* TOP BAR */
+
+.top-bar{
+  display:flex;
   align-items:center;
-  gap:80px;
+  gap:10px;
 }
 
 .level{
-  width:85px;
-  height:85px;
-  border-radius:50%;
-  background:white;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-weight:700;
-  font-size:18px;
-  box-shadow:0 6px 15px rgba(0,0,0,.2);
-  cursor:pointer;
-  transition:.25s;
-  border:6px solid #58cc02;
-  position:relative;
-}
-.level:hover{transform:scale(1.08)}
-
-.level span{
-  position:absolute;
-  top:-28px;
-  font-size:13px;
-  font-weight:700;
+  background:#58cc02;
   color:white;
-}
-
-.path{
-  width:6px;
-  height:80px;
-  background:white;
-  border-radius:10px;
-}
-
-.bottom-nav{
-  position:fixed;
-  bottom:0;
-  left:0;
-  right:0;
-  height:75px;
-  background:white;
-  display:flex;
-  justify-content:space-around;
-  align-items:center;
-  box-shadow:0 -3px 15px rgba(0,0,0,.15);
-}
-
-.nav-btn{
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  font-size:12px;
-  font-weight:600;
-  color:#777;
-}
-.nav-btn img{
-  width:28px;
-  margin-bottom:5px;
-}
-
-.quiz{
-  position:fixed;
-  inset:0;
-  background:linear-gradient(180deg,#58cc02,#1cb0f6);
-  display:none;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  padding:20px;
-}
-
-.quiz-box{
-  background:white;
-  width:100%;
-  max-width:420px;
-  border-radius:20px;
-  padding:25px;
-  text-align:center;
-  box-shadow:0 15px 30px rgba(0,0,0,.25);
-}
-
-#question{
-  font-size:32px;
-  margin-bottom:20px;
+  padding:6px 12px;
+  border-radius:14px;
   font-weight:800;
 }
 
-.options{
+.xp-bar{
+  flex:1;
+  height:12px;
+  background:#dff5d8;
+  border-radius:20px;
+  overflow:hidden;
+}
+
+#progressBar{
+  height:100%;
+  width:0%;
+  background:linear-gradient(90deg,#58cc02,#89e219);
+  transition:.4s;
+}
+
+.score,.streak{
+  padding:6px 10px;
+  border-radius:14px;
+  background:#f1fdf0;
+  border:2px solid #58cc02;
+  font-weight:700;
+}
+
+/* CARD */
+
+.card{
+  flex:1;
+  background:#f8fff6;
+  border-radius:26px;
+  margin:20px 0;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  box-shadow:0 10px 25px rgba(0,0,0,.08);
+}
+
+#question{
+  font-size:2.6rem;
+  font-weight:900;
+  color:#000;
+  text-align:center;
+}
+
+/* OPTIONS */
+
+#options{
   display:grid;
+  grid-template-columns:1fr 1fr;
   gap:12px;
 }
 
-.options button{
-  padding:14px;
+#options button{
+  padding:16px;
+  font-size:1.3rem;
   border:none;
-  border-radius:12px;
-  font-size:16px;
-  font-weight:600;
+  border-radius:18px;
   background:#58cc02;
   color:white;
+  font-weight:800;
   cursor:pointer;
+  transition:.15s;
 }
-.options button:hover{background:#46a302}
+
+#options button:hover{
+  transform:scale(1.05);
+  background:#46b400;
+}
+
+/* RESULT */
 
 #result{
-  margin-top:15px;
-  font-weight:700;
-  font-size:18px;
+  text-align:center;
+  margin-top:8px;
+  font-weight:800;
+  min-height:28px;
+}
+
+.badge{
+  text-align:center;
+  margin-top:4px;
+  font-weight:900;
+  color:#ff9600;
+}
+
+#restartBtn{
+  margin-top:12px;
+  padding:15px;
+  border:none;
+  border-radius:20px;
+  background:#ff9600;
+  color:white;
+  font-weight:900;
+  display:none;
 }
 </style>
 </head>
 
 <body>
 
-<div class="map" id="map"></div>
+<div class="app">
 
-<div class="quiz" id="quiz">
-  <div class="quiz-box">
-    <div id="question"></div>
-    <div class="options" id="options"></div>
-    <div id="result"></div>
+  <div class="top-bar">
+    <div class="level" id="level">Lv 1</div>
+    <div class="xp-bar"><div id="progressBar"></div></div>
+    <div class="score" id="score">0 XP</div>
+    <div class="streak" id="streak">x 0</div>
   </div>
-</div>
 
-<div class="bottom-nav">
-  <div class="nav-btn"><img src="https://cdn-icons-png.flaticon.com/512/1946/1946436.png"><span>Beranda</span></div>
-  <div class="nav-btn"><img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png"><span>Profil</span></div>
+  <div class="card">
+    <div id="question">?</div>
+  </div>
+
+  <div id="options"></div>
+
+  <div id="result"></div>
+  <div class="badge" id="badge"></div>
+
+  <button id="restartBtn">🔁 Main Lagi</button>
+
 </div>
 
 <script>
-const data = [
+const vocab=[
       ["わたし", "saya"],
       ["わたしたち", "kami"],
       ["あなた", "kamu"],
@@ -422,64 +439,102 @@ const data = [
       ["くだもの", "buah-buahan"],
 ];
 
-let current = 0;
+let q=[],cur=0,xp=0,streak=0,level=1;
 
-function buildMap(){
-  const map = document.getElementById("map");
-  for(let i=0;i<data.length;i++){
-    const level = document.createElement("div");
-    level.className="level";
-    level.innerHTML=`<span>Lv ${i+1}</span>${i+1}`;
-    level.onclick=()=>startQuiz(i);
-    map.appendChild(level);
-    if(i < data.length-1){
-      const path=document.createElement("div");
-      path.className="path";
-      map.appendChild(path);
-    }
-  }
+function shuffle(a){
+ for(let i=a.length-1;i>0;i--){
+  const j=Math.floor(Math.random()*(i+1));
+  [a[i],a[j]]=[a[j],a[i]];
+ }
 }
 
-function startQuiz(i){
-  current=i;
-  document.getElementById("quiz").style.display="flex";
-  loadQuestion();
+function save(){
+ localStorage.setItem("vocab_ultra_save",JSON.stringify({xp,level}));
+}
+
+function load(){
+ const d=JSON.parse(localStorage.getItem("vocab_ultra_save"));
+ if(d){
+   xp=d.xp||0;
+   level=d.level||1;
+ }
+}
+
+function updateUI(){
+ document.getElementById("score").textContent=xp+" XP";
+ document.getElementById("level").textContent="Lv "+level;
+ document.getElementById("streak").textContent="x "+streak;
+
+ const need = level * 300;
+ document.getElementById("progressBar").style.width=Math.min((xp/need)*100,100)+"%";
 }
 
 function loadQuestion(){
-  const [q,a] = data[current];
-  document.getElementById("question").textContent = q;
+ if(cur>=q.length){finish();return}
 
-  const opts=new Set([a]);
-  while(opts.size<4){
-    opts.add(data[Math.floor(Math.random()*data.length)][1]);
-  }
+ const [indo,jp]=q[cur];
+ document.getElementById("question").textContent=indo;
 
-  const options=[...opts].sort(()=>Math.random()-0.5);
-  const box=document.getElementById("options");
-  box.innerHTML="";
-  options.forEach(o=>{
-    const btn=document.createElement("button");
-    btn.textContent=o;
-    btn.onclick=()=>check(o,a);
-    box.appendChild(btn);
-  });
+ document.getElementById("result").textContent="";
+ document.getElementById("badge").textContent="";
+
+ const ops=new Set([jp]);
+ while(ops.size<4){
+  ops.add(vocab[Math.floor(Math.random()*vocab.length)][1]);
+ }
+
+ document.getElementById("options").innerHTML="";
+ [...ops].sort(()=>Math.random()-0.5).forEach(o=>{
+  const b=document.createElement("button");
+  b.textContent=o;
+  b.onclick=()=>check(o,jp);
+  document.getElementById("options").appendChild(b);
+ });
 }
 
 function check(sel,ans){
-  const res=document.getElementById("result");
-  if(sel===ans){
-    res.textContent="✅ Benar!";
-    setTimeout(()=>{
-      document.getElementById("quiz").style.display="none";
-      res.textContent="";
-    },600);
-  }else{
-    res.textContent="❌ Salah! "+ans;
+ if(sel===ans){
+  streak++;
+  let bonus = streak>=5 ? 5 : 2;
+  xp+=bonus;
+
+  if(xp >= level*300){
+    level++;
   }
+
+  if(streak==5) document.getElementById("badge").textContent="🏆 COMBO x5";
+
+  document.getElementById("result").textContent=" BENAR +"+bonus+"XP";
+  cur++;
+ }else{
+  streak=0;
+  document.getElementById("result").textContent="❌ SALAH";
+ }
+ updateUI();
+ save();
+ setTimeout(loadQuestion,500);
 }
 
-buildMap();
+function finish(){
+ document.getElementById("question").textContent="🎉";
+ document.getElementById("options").innerHTML="";
+ document.getElementById("result").textContent="SELESAI! TOTAL XP: "+xp;
+ document.getElementById("restartBtn").style.display="block";
+}
+
+function start(){
+ load();
+ q=[...vocab];
+ shuffle(q);
+ cur=0;
+ streak=0;
+ updateUI();
+ document.getElementById("restartBtn").style.display="none";
+ loadQuestion();
+}
+
+document.getElementById("restartBtn").onclick=start;
+start();
 </script>
 
 </body>
