--- a/kuis.html
+++ b/kuis.html
@@ -157,6 +157,8 @@ body{
     <div class="xp-bar"><div id="progressBar"></div></div>
     <div class="score" id="score">0 XP</div>
     <div class="streak" id="streak">x 0</div>
+    <div class="counter" id="counter">1 / 46</div>
+  </div>
   </div>
 
   <div class="card">
