Change localStorage key from 'vocab' to 'kotoba'

--- a/kotoba.html
+++ b/kotoba.html
@@ -453,7 +453,7 @@ function save(){
 }
 
 function load(){
- const d=JSON.parse(localStorage.getItem("vocab_ultra_save"));
+ const d=JSON.parse(localStorage.getItem("kotoba_ultra_save"));
  if(d){
    xp=d.xp||0;
    level=d.level||1;
