--- a/xpresstka.html
+++ b/xpresstka.html
@@ -349,7 +349,7 @@ function save(){
 }
 
 function load(){
- const d=JSON.parse(localStorage.getItem("vocab_ultra_save"));
+ const d=JSON.parse(localStorage.getItem("xpress_ultra_save"));
  if(d){
    xp=d.xp||0;
    level=d.level||1;
