--- a/kuis.html
+++ b/kuis.html
@@ -183,7 +183,18 @@ const kana=[
 ["ま","ma"],["み","mi"],["む","mu"],["め","me"],["も","mo"],
 ["や","ya"],["ゆ","yu"],["よ","yo"],
 ["ら","ra"],["り","ri"],["る","ru"],["れ","re"],["ろ","ro"],
-["わ","wa"],["を","wo"],["ん","n"]
+["わ","wa"],["を","wo"],["ん","n"],
+      ["きゃ","kya"],["きゅ","kyu"],["きょ","kyo"],
+      ["しゃ","sha"],["しゅ","shu"],["しょ","sho"],
+      ["ちゃ","cha"],["ちゅ","chu"],["ちょ","cho"],
+      ["にゃ","nya"],["にゅ","nyu"],["にょ","nyo"],
+      ["ひゃ","hya"],["ひゅ","hyu"],["ひょ","hyo"],
+      ["みゃ","mya"],["みゅ","myu"],["みょ","myo"],
+      ["りゃ","rya"],["りゅ","ryu"],["りょ","ryo"],
+      ["ぎゃ","gya"],["ぎゅ","gyu"],["ぎょ","gyo"],
+      ["じゃ","ja"],["じゅ","ju"],["じょ","jo"],
+      ["びゃ","bya"],["びゅ","byu"],["びょ","byo"],
+      ["ぴゃ","pya"],["ぴゅ","pyu"],["ぴょ","pyo"]
 ];
 
 let q=[],cur=0,xp=0,streak=0,level=1;
